kubernetes/k3s-01/workloads/prowlarr/middleware-ipallowlist.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prowlarr-ipallowlist
  namespace: torrenting
spec:
  ipAllowList:
    sourceRange:
      - 172.16.0.2
      - 192.168.10.3
      - 192.168.10.4
