kubernetes/k3s-01/workloads/prowlarr/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: torrenting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
        access-postgres: "true"
    spec:
      containers:
        - name: prowlarr
          image: docker.io/linuxserver/prowlarr:2.6.5@sha256:c96b56d94d116a9f4de94bc23d3381689492e6c3cfb7435320e8d982e406f99a
          volumeMounts:
            - name: prowlarr
              mountPath: /config
      volumes:
        - name: prowlarr
          persistentVolumeClaim:
            claimName: prowlarr
