kubernetes/k3s-01/workloads/prowlarr/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prowlarr
  namespace: torrenting
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: prowlarr
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      - podSelector:
          matchLabels:
            app: lidarr
      - podSelector:
          matchLabels:
            app: radarr
      - podSelector:
          matchLabels:
            app: readarr
      - podSelector:
          matchLabels:
            app: sonarr
      ports:
        - protocol: TCP
          port: 9696
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: lidarr
      ports:
        - protocol: TCP
          port: 8686
    - to:
      - podSelector:
          matchLabels:
            app: radarr
      ports:
        - protocol: TCP
          port: 7878
    - to:
      - podSelector:
          matchLabels:
            app: readarr
      ports:
        - protocol: TCP
          port: 8787
    - to:
      - podSelector:
          matchLabels:
            app: sonarr
      ports:
        - protocol: TCP
          port: 8989
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: postgres
        podSelector:
          matchLabels:
            app: postgres
      ports:
        - protocol: TCP
          port: 5432
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
